--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
 <h4>Welcome to Lessons App</h4>
 <p>Manage your Lessons and Users.</p>
+<button class="btn btn-success" (click)="navigateToLessons()">Go To Lessons</button>
+<button class="btn btn-success" (click)="navigateToLessonEdit()">Go To Lesson Edit 1</button>
+<button class="btn btn-success" (click)="login()">Login</button>
+<button class="btn btn-success" (click)="logout()">Logout</button>
 
 
