--- a/src/app/lessons/lesson/lesson.component.html
+++ b/src/app/lessons/lesson/lesson.component.html
@@ -1,2 +1,4 @@
 <h5>{{ lesson.name }}</h5>
 <p>Lesson status is {{ lesson.status }}</p>
+<hr>
+<button class="btn btn-primary" (click)="edit()">Edit</button>
