--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,7 +5,7 @@
         [routerLink]="['/users', user.id, user.name]"
         class="list-group-item"
         *ngFor="let user of users">
-        {{ user.name }}
+        {{ user.name | super }}
       </a>
     </div>
   </div>
